--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.amusset.glucofood">
 
-    <uses-permission android:name="android.permission.SCHEDULE_EXACT_ALARM"/>
-
     <application
-        android:name=".common.App"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -13,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Glucofood">
         <activity
-            android:name=".host.HostActivity"
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,10 +18,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <receiver
-            android:name=".common.alarm.AlarmReceiver"
-            android:exported="false" />
     </application>
 
 </manifest>
