Recyclerview and Cardview dependencies

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -56,4 +56,10 @@ dependencies {
     //Navigation
     implementation 'androidx.navigation:navigation-fragment-ktx:2.4.2'
     implementation 'androidx.navigation:navigation-ui-ktx:2.4.2'
+
+    //RecyclerView
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+
+    //Cardview
+    implementation 'androidx.cardview:cardview:1.0.0'
 }
